--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,20 @@
 /build
 /captures
 .externalNativeBuild
+.idea/caches/
+.idea/codeStyles/
+.idea/gradle.xml
+.idea/misc.xml
+.idea/runConfigurations.xml
+.idea/vcs.xml
+app/.gitignore
+app/build.gradle
+app/libs/
+app/proguard-rules.pro
+app/src/
+build.gradle
+gradle.properties
+gradle/
+gradlew
+gradlew.bat
+settings.gradle
